--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -7,6 +7,11 @@
 .playlists {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  h3 {
+    width: 300px;
+    color: white;
+  }
   img {
     height:300px;
   }
