--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -13,7 +13,7 @@
     color: white;
   }
   img {
-    height:300px;
+    height: 300px;
   }
 }
 
@@ -25,25 +25,8 @@ button {
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-  border-radius: 50%
+  border-radius: 50%;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-
 
 @keyframes App-logo-spin {
   from {
