trying to break the form component out of the main App component

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: linear-gradient(grey, black);
+  background-image: linear-gradient(white, grey);
   background-image: 100%;
 }
 
