formatting suggestions list

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -7,6 +7,17 @@
   margin-top: 5%;
 }
 
+.topInfo {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.artistChips {
+  grid-template-columns: col 3 / span 3;
+  max-height: 500px;
+  overflow: scroll;
+}
 // .searchBar {
 //   size: 3em;
 // }
