now playing in pop up works

--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -35,6 +35,11 @@
   border-radius: 50%;
 }
 
+#nowPlayingCard {
+  text-align: center;
+  padding: 2%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
