--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -16,7 +16,7 @@
 .artistChips {
   grid-template-columns: col 3 / span 3;
   max-height: 500px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #bottom-fade {
